# OS

./: .gitignore
OSColloquiums/: OSColloquium1.txt
OSColloquiums/CollTask/: CMakeLists.txt
OSColloquiums/CollTask/src/: core.cpp  core.h  duplicate_remover.h  factorial.cpp  factorial.h  linked_list.h  main.cpp
OSColloquiums/CollTask/tests/: test_duplicate_remover.cpp  test_factorial.cpp  test_integration.cpp  test_linked_list.cpp
OSLab1/: CMakeLists.txt  common.h  creator.cpp  main.cpp  reporter.cpp  test_creator.cpp  test_main.cpp  test_reporter.cpp
OSLab2/boost/: CMakeLists.txt
OSLab2/boost/src/: ArrayThreads.cpp  ArrayThreads.h  main.cpp
OSLab2/boost/tests/: tests.cpp
OSLab2/boost2/: CMakeLists.txt
OSLab2/boost2/src/: ArrayThreads.cpp  ArrayThreads.h  main.cpp
OSLab2/boost2/tests/: tests.cpp
OSLab2/winapi/: CMakeLists.txt  README.md
OSLab2/winapi/src/: ArrayThreads.cpp  ArrayThreads.h  main.cpp
OSLab2/winapi/tests/: tests.cpp
OSLab3/Boost/: CMakeLists.txt
OSLab3/Boost/src/: definitions.h  main.cpp  worker.cpp  worker.h
OSLab3/Boost/tests/: tests.cpp
OSLab3/winapi/: .clang-format  CMakeLists.txt
OSLab3/winapi/src/: definitions.h  main.cpp  worker.cpp  worker.h
OSLab3/winapi/tests/: tests.cpp
OSLab4/Lab4WinApi/: CMakeLists.txt
OSLab4/Lab4WinApi/src/: common.h  queue_ops.cpp  queue_ops.h  receiver.cpp  sender.cpp  utils.cpp  utils.h
OSLab4/Lab4WinApi/tests/: test_queue.cpp
boost/: CMakeLists.txt
boost/src/: main.cpp
